fix(accordion): align highlight-indicator with header for consistency

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -80,7 +80,7 @@
 		left: 102px;
 		pointer-events: none;
 		position: absolute;
-		top: -13px;
+		top: -15px;
 		width: 10px;
 		z-index: 1;
 	}
